--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.30)
 
-project(Temp LANGUAGES CXX)
+project(Bop
+	VERSION 1.0.0
+	LANGUAGES CXX
+)
 
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
-add_executable(main "Main.cpp")
+add_subdirectory("bop")
