--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.30)
 
 project(Bop
-	VERSION 1.0.0
+	VERSION 1.2.0
 	LANGUAGES CXX
 )
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
+option(BOP_BUILD_EXAMPLE "Build example" OFF)
+
 add_subdirectory("bop")
+
+if(BOP_BUILD_EXAMPLE)
+	add_subdirectory("example")
+endif()
